fixed mobile navbars not opening on start, fixed navbars mobile touch events not responsive, fixed label media queries on mobile, added isActive logic on logo press button for window height < 500px

--- a/src/components/left-navbar/index.css
+++ b/src/components/left-navbar/index.css
@@ -96,8 +96,7 @@
 
 @media Screen and (max-height:300px) {
     #nav-menu {
-        height: 0%;
-        font-size: 0;
+        display:none !important;
     }
     #nav-contacts {
         height: 100%;
